objects/acknowltng__KnowledgeSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>acknowltng__Description__c</fullName>
        <description>Description field for setting value</description>
        <inlineHelpText>Description field for setting value</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acknowltng__Label__c</fullName>
        <description>Settings variable label</description>
        <inlineHelpText>Setting variable label</inlineHelpText>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__Value__c</fullName>
        <description>Current value of the setting</description>
        <inlineHelpText>Current value of the setting</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AC Knowledge Settings</label>
</CustomObject>